--- a/notebooks/Calc_Meal_Freq.ipynb
+++ b/notebooks/Calc_Meal_Freq.ipynb
@@ -282,200 +282,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 1,
    "id": "fc749095-0401-4cb3-acf2-6a7a0750bcee",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[t\n",
-       " 2022-09-12 08:00:00     88\n",
-       " 2022-09-13 08:00:00     71\n",
-       " 2022-09-14 08:00:00     89\n",
-       " 2022-09-15 08:00:00     90\n",
-       " 2022-09-16 08:00:00     85\n",
-       " 2022-09-17 08:00:00     99\n",
-       " 2022-09-18 08:00:00     93\n",
-       " 2022-09-19 08:00:00    111\n",
-       " 2022-09-20 08:00:00    104\n",
-       " 2022-09-21 08:00:00     97\n",
-       " 2022-09-22 08:00:00    103\n",
-       " 2022-09-23 08:00:00     98\n",
-       " 2022-09-24 08:00:00     95\n",
-       " 2022-09-25 08:00:00     90\n",
-       " 2022-09-26 08:00:00     90\n",
-       " 2022-09-27 08:00:00    113\n",
-       " 2022-09-28 08:00:00     92\n",
-       " 2022-09-29 08:00:00     93\n",
-       " 2022-09-30 08:00:00     81\n",
-       " 2022-10-01 08:00:00     79\n",
-       " 2022-10-02 08:00:00     81\n",
-       " 2022-10-03 08:00:00     81\n",
-       " 2022-10-04 08:00:00     62\n",
-       " 2022-10-05 08:00:00     62\n",
-       " 2022-10-06 08:00:00     51\n",
-       " 2022-10-07 08:00:00     77\n",
-       " 2022-10-08 08:00:00     69\n",
-       " 2022-10-09 08:00:00     82\n",
-       " Freq: D, Name: n_meals, dtype: int64,\n",
-       " t\n",
-       " 2022-09-12 08:00:00    115\n",
-       " 2022-09-13 08:00:00     95\n",
-       " 2022-09-14 08:00:00    118\n",
-       " 2022-09-15 08:00:00    104\n",
-       " 2022-09-16 08:00:00     88\n",
-       " 2022-09-17 08:00:00     89\n",
-       " 2022-09-18 08:00:00     93\n",
-       " 2022-09-19 08:00:00    104\n",
-       " 2022-09-20 08:00:00     88\n",
-       " 2022-09-21 08:00:00     97\n",
-       " 2022-09-22 08:00:00     86\n",
-       " 2022-09-23 08:00:00     82\n",
-       " 2022-09-24 08:00:00     83\n",
-       " 2022-09-25 08:00:00     77\n",
-       " 2022-09-26 08:00:00     74\n",
-       " 2022-09-27 08:00:00     87\n",
-       " 2022-09-28 08:00:00     65\n",
-       " 2022-09-29 08:00:00     80\n",
-       " 2022-09-30 08:00:00     98\n",
-       " 2022-10-01 08:00:00     80\n",
-       " 2022-10-02 08:00:00     90\n",
-       " 2022-10-03 08:00:00     88\n",
-       " 2022-10-04 08:00:00     75\n",
-       " 2022-10-05 08:00:00     84\n",
-       " 2022-10-06 08:00:00     58\n",
-       " 2022-10-07 08:00:00     59\n",
-       " 2022-10-08 08:00:00     63\n",
-       " 2022-10-09 08:00:00     55\n",
-       " Freq: D, Name: n_meals, dtype: int64,\n",
-       " t\n",
-       " 2022-09-12 08:00:00     84\n",
-       " 2022-09-13 08:00:00     81\n",
-       " 2022-09-14 08:00:00     77\n",
-       " 2022-09-15 08:00:00     83\n",
-       " 2022-09-16 08:00:00     90\n",
-       " 2022-09-17 08:00:00     95\n",
-       " 2022-09-18 08:00:00     95\n",
-       " 2022-09-19 08:00:00    109\n",
-       " 2022-09-20 08:00:00     93\n",
-       " 2022-09-21 08:00:00     86\n",
-       " 2022-09-22 08:00:00     95\n",
-       " 2022-09-23 08:00:00     85\n",
-       " 2022-09-24 08:00:00     89\n",
-       " 2022-09-25 08:00:00     78\n",
-       " 2022-09-26 08:00:00    101\n",
-       " 2022-09-27 08:00:00     90\n",
-       " 2022-09-28 08:00:00     87\n",
-       " 2022-09-29 08:00:00     87\n",
-       " 2022-09-30 08:00:00    104\n",
-       " 2022-10-01 08:00:00     92\n",
-       " 2022-10-02 08:00:00     89\n",
-       " 2022-10-03 08:00:00     64\n",
-       " 2022-10-04 08:00:00     58\n",
-       " 2022-10-05 08:00:00     92\n",
-       " 2022-10-06 08:00:00    106\n",
-       " 2022-10-07 08:00:00    115\n",
-       " 2022-10-08 08:00:00     94\n",
-       " 2022-10-09 08:00:00     90\n",
-       " Freq: D, Name: n_meals, dtype: int64,\n",
-       " t\n",
-       " 2022-09-12 08:00:00    62\n",
-       " 2022-09-13 08:00:00    60\n",
-       " 2022-09-14 08:00:00    57\n",
-       " 2022-09-15 08:00:00    68\n",
-       " 2022-09-16 08:00:00    58\n",
-       " 2022-09-17 08:00:00    56\n",
-       " 2022-09-18 08:00:00    59\n",
-       " 2022-09-19 08:00:00    66\n",
-       " 2022-09-20 08:00:00    66\n",
-       " 2022-09-21 08:00:00    60\n",
-       " 2022-09-22 08:00:00    78\n",
-       " 2022-09-23 08:00:00    72\n",
-       " 2022-09-24 08:00:00    77\n",
-       " 2022-09-25 08:00:00    70\n",
-       " 2022-09-26 08:00:00    58\n",
-       " 2022-09-27 08:00:00    59\n",
-       " 2022-09-28 08:00:00    70\n",
-       " 2022-09-29 08:00:00    59\n",
-       " 2022-09-30 08:00:00    73\n",
-       " 2022-10-01 08:00:00    53\n",
-       " 2022-10-02 08:00:00    63\n",
-       " 2022-10-03 08:00:00    63\n",
-       " 2022-10-04 08:00:00    68\n",
-       " 2022-10-05 08:00:00    61\n",
-       " 2022-10-06 08:00:00    61\n",
-       " 2022-10-07 08:00:00    67\n",
-       " 2022-10-08 08:00:00    61\n",
-       " 2022-10-09 08:00:00    63\n",
-       " Freq: D, Name: n_meals, dtype: int64,\n",
-       " t\n",
-       " 2022-09-12 08:00:00     85\n",
-       " 2022-09-13 08:00:00     95\n",
-       " 2022-09-14 08:00:00     91\n",
-       " 2022-09-15 08:00:00     90\n",
-       " 2022-09-16 08:00:00     87\n",
-       " 2022-09-17 08:00:00     92\n",
-       " 2022-09-18 08:00:00     84\n",
-       " 2022-09-19 08:00:00     89\n",
-       " 2022-09-20 08:00:00     83\n",
-       " 2022-09-21 08:00:00     89\n",
-       " 2022-09-22 08:00:00    108\n",
-       " 2022-09-23 08:00:00     78\n",
-       " 2022-09-24 08:00:00     96\n",
-       " 2022-09-25 08:00:00     83\n",
-       " 2022-09-26 08:00:00     87\n",
-       " 2022-09-27 08:00:00     93\n",
-       " 2022-09-28 08:00:00     83\n",
-       " 2022-09-29 08:00:00     80\n",
-       " 2022-09-30 08:00:00     87\n",
-       " 2022-10-01 08:00:00     75\n",
-       " 2022-10-02 08:00:00     85\n",
-       " 2022-10-03 08:00:00     83\n",
-       " 2022-10-04 08:00:00     70\n",
-       " 2022-10-05 08:00:00     53\n",
-       " 2022-10-06 08:00:00     45\n",
-       " 2022-10-07 08:00:00     50\n",
-       " 2022-10-08 08:00:00     32\n",
-       " 2022-10-09 08:00:00     39\n",
-       " Freq: D, Name: n_meals, dtype: int64,\n",
-       " t\n",
-       " 2022-09-12 08:00:00    116\n",
-       " 2022-09-13 08:00:00    110\n",
-       " 2022-09-14 08:00:00     99\n",
-       " 2022-09-15 08:00:00     97\n",
-       " 2022-09-16 08:00:00     91\n",
-       " 2022-09-17 08:00:00     89\n",
-       " 2022-09-18 08:00:00     74\n",
-       " 2022-09-19 08:00:00     86\n",
-       " 2022-09-20 08:00:00     86\n",
-       " 2022-09-21 08:00:00     91\n",
-       " 2022-09-22 08:00:00     83\n",
-       " 2022-09-23 08:00:00     74\n",
-       " 2022-09-24 08:00:00     77\n",
-       " 2022-09-25 08:00:00     72\n",
-       " 2022-09-26 08:00:00     82\n",
-       " 2022-09-27 08:00:00     66\n",
-       " 2022-09-28 08:00:00     67\n",
-       " 2022-09-29 08:00:00     75\n",
-       " 2022-09-30 08:00:00     82\n",
-       " 2022-10-01 08:00:00     73\n",
-       " 2022-10-02 08:00:00     72\n",
-       " 2022-10-03 08:00:00     67\n",
-       " 2022-10-04 08:00:00     58\n",
-       " 2022-10-05 08:00:00     58\n",
-       " 2022-10-06 08:00:00     72\n",
-       " 2022-10-07 08:00:00     76\n",
-       " 2022-10-08 08:00:00     66\n",
-       " 2022-10-09 08:00:00     66\n",
-       " Freq: D, Name: n_meals, dtype: int64]"
-      ]
-     },
-     "execution_count": 112,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'ctl' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_21328\\954859826.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mctl\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'ctl' is not defined"
+     ]
     }
    ],
    "source": [
