--- a/notebooks/FEDXC_readdata.ipynb
+++ b/notebooks/FEDXC_readdata.ipynb
@@ -28,6 +28,10 @@
    "execution_count": 3,
    "id": "18bde46a-213a-44c7-b506-67a84af2ee04",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -14663,7 +14667,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.17"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
